--- a/assets/css/_hero.css
+++ b/assets/css/_hero.css
@@ -15,7 +15,7 @@
   color:var(--text);
   background:
     linear-gradient(to bottom, rgba(0,0,0,0.20), rgba(0,0,0,0.28)),
-    url('images/bike-in-summer.webp');
+    url('../images/bike-in-summer.webp');
   background-size:cover;
   background-position:center;
 }
