Avatar: responsive srcset; popup uses 512px

--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -1,7 +1,17 @@
 <header>
   <div class="header-left">
     <div class="avatar-wrap">
-      <img class="avatar" src="assets/images/avatar-alex-in-summer_512.webp" width="128" height="128" alt="Alex Atkinson" loading="eager" fetchpriority="high">
+      <img
+        class="avatar"
+        src="assets/images/avatar-alex-in-summer_128.webp"
+        srcset="assets/images/avatar-alex-in-summer_128.webp 128w, assets/images/avatar-alex-in-summer_256.webp 256w, assets/images/avatar-alex-in-summer_512.webp 512w"
+        sizes="72px"
+        width="128"
+        height="128"
+        alt="Alex Atkinson"
+        loading="eager"
+        fetchpriority="high"
+      >
     </div>
     <div>
       <h1>Alex Atkinson</h1>
